test/src/declarator/scenarios/fail/input/ts_module6.h
#pragma once

#include "TS.h"
#include "details/internal_include1.h"

namespace global IS_TS_NAMESPACE
{

namespace stuffs IS_TS_MODULE
{

class TS_EXPORT Entity
{
public:
    TS_METHOD Entity() = default;
    TS_METHOD void entity();
};

} // namespace IS_TS_MODULE

} // namespace IS_TS_NAMESPACE
